--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /* google font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 /* Common style */
-body
-{
+body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -11,135 +10,84 @@ body
 
 
 /* ...............................Header style start..................... */
-.header-section
-{
+.header-section{
     background-color:   #2D25A0;
-    width: 100%;
-    height: 100%;
-    padding-bottom: 50px;
-}
-main{
-    background-color: #FFFFFF;
 }
 .container
 {
     display: flex;
-    
 }
-
-/* .container:hover .text-bar
-{
-    
-} */
-.container:hover .text-bar
-{
-    transform: scale(1.1);
-}
-
-.text-bar
-{
-    padding: 50px;
-    margin-left:  100px;
-    margin-right: 100px;
-    margin-top: 207px;
-    margin-bottom: 240px;
-    
-}
-.container:hover .text-bar
-{
-    background-color: #2D25A0;
-}
-.container:hover .text-bar
-{
-    transform: scale(1.2);
-    transition: transform 1s ease-in-out ;
-}
-
- .text-bar
-{
-    padding: 50px;
-    margin: 100px;
-    color: white;
-} 
-
-/* .container:hover .image-bar {
-    background-color: rgb(63, 8, 63);
-} */
 .container:hover .image-bar
 {
     transform: scale(1.2);
-    transition: transform 1s  ease-in-out ;
+    transition: transform 3s  ease-in-out ;
 }
-
+.text-bar
+{
+    margin-left:  100px;
+    margin-right: 100px;
+    margin-top: 131px;
+    margin-bottom: 169px;
+    color: white;    
+}
+.text-bar h1{
+    font-size: 64px;
+    font-weight: 700;
+}
 
 .text-bar a{
     background-color: #E02C6D;
-    font-size: 20px;
-    font-weight: 700;
     text-decoration: none;
-    color: wheat;
+    color: white;
     padding: 10px;
 }
 .image-bar
 {
-    /* width: 556.01px;
-    height: 438px; */
-    margin-top: 150px;
-    margin-bottom: 80px;
-    margin-left: 140px;
-    margin-left: 200px;
-    font-size: 64px;
-    
-    
+    margin-top: 59px;
+    margin-bottom: 86px;
+    margin-left: 102px;
+    margin-right: 140px;
 }
 .image-bar img
 {
-    width: 500px;
-    height: 480px;
-    margin-top: 50px;
-   
+    width: 556px;
+    height: 438px;
+    margin-top: 60px;
 }
 /* .........................header style end ................................ */
 
 /* .................... top style grid style start ............................ */
+.Players-section{
+    width: 1050px;
+    margin-left: 180px;
+    margin-top: 70px;
+}
 .players
 {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-row-gap: 15px;
+    flex-direction: column;
+    grid-row-gap: 27px;
     grid-column-gap: 15px;
-    
-    
-    
-}
-.players
-{
-    margin-left: 180px;
-    margin-right: 210px;
-    margin-top: 100px;
-    padding-bottom: 100px;
     
 }
 .player
 {
-    /* box-shadow: 10px 10px 10px 10px  #888888; */
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    border-radius: square;
-    padding-left: 10px;
-   
-    
+    padding: 10px;
 }
-.player img
-{
-    height: 200px;
-    width: 190px;
+.player p{
+    color: #6C6C6C;
+    font-weight: 400;
+    font-size: 16px;
 }
-/* anpther part */
-.messi-part
+
+/* heighlites part  start*/
+
+.heighlites
 {
     display: flex;
-    margin-left: 180px;
-    margin-top: 50px;
+    margin: 100px
 }
 .match-info
 {
@@ -154,13 +102,9 @@ main{
 }
 .match-info a
 {
-    width: 400px;
-    height: 309px;
-    background-color:  #E02C6D;
-    font-size: 20px;
-    font-weight: 700;
+    background-color: #E02C6D;
     text-decoration: none;
-    color: wheat;
+    color: white;
     padding: 10px;
 }
 .image-info
@@ -171,114 +115,48 @@ main{
 {
     width: 500px;
     height: 400px;
-    
-
-}
-.anchor-button
-{
-    text-decoration: none;
-    background-color: #E66F91;
-    color: white;
-    width: 500px;
-    height:200px;
-   padding-left:10px;
-}
-.anchor-button,fas fa-arrow-righ
-{
-    padding: 5px;
-}
-
-/* button a
-{
-    height: 20px;
-    widtwidth
-} */
-fas fa-arrow-right
-{
-    display:static;
 }
 /*  .......................top player style grid style end ..................... */
 
 
-
 /* sponsors start */
-.offcial-sponsor
-{
-    text-align: justify;
-}
-.offcial-sponsor
-{
-    margin-left: 150px;
-}
-.offcial-sponsor h1{
-    background-color: white;
-    
+
+.offcial-sponsor {
+   text-align: center;
+   margin: 70px;
 }
 .partners
 {
     display: grid;
-    grid-template-columns: repeat(3,300px);
-    
+    grid-template-columns: repeat(3,1fr);
+    margin: 50px;
 }
 /* sponsor end */
-/* latest course start */
-.latest-update
-{
-    text-align: center;
-    
-}
-.enter-mail
-{
-    border: 5px solid rgb(178, 195, 153);
-    border-radius: 10px;
-    font-weight: 700;
-    width: 500px;
-    height: 30px;
-}
-.button-type
-{
-    font-weight: 700;
-    border:5px solid gray;
-    border-radius: 10px;
-}
-/* latest course end */
- 
 
 /* ................footer style start ..............*/
-/* footer style */
-footer
+
+footer img{
+    margin-bottom: 20px;
+}
+.footer-section
 {
+    margin-top: 150px;
+    margin-bottom: 63px;
     text-align: center;
 }
-.footer-class
-{
-    margin-top: 100px;
+.social-media a{
+    text-decoration: none;
+    color: gray;
+    padding-left: 25px;
 }
 /* .....................footer style  end ..............*/
+
+
 /*............ media  queries start .................... */
 /* For mobile devices */
 @media only screen and (max-width:688px)
 {
-    .header-section
-    {
-        
-        
-        width:100%;
-        
-    }
-    .container
-    {
-        grid-template-columns: repeat(1,1fr);
-    }
-    .container
-    {
-        flex-direction: column;
-    }
-    .players{
-        width: 100%;
-        grid-template-columns: repeat(1,1fr);
-        flex-direction:column;
-    }
+    
     
 }
 /*............ media  queries end.................... */
